# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.141 2010-06-22 13:02:12 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.8 (2010/??/??)
 - (2010/06/16) Fixed bug#5488 - AutoPriorityIncrease runs into failures.
 - (2010/06/16) Fixed bug#5478 - Web Installer has 'editable' license text.
 - (2010/05/31) Fixed bug#5385 - Queue name is not used in signature on ticket
    creation.
 - (2010/05/28) Fixed bug#5235 - Link in response not shown as link.
 - (2010/05/28) Added PNG version of data model in doc directory.
 - (2010/05/28) Fixed bug#5395 - Function $LanguageObject->Time() can't process
    seconds.
 - (2010/05/25) Fixed bug#5397 - Response not converted to Ascii when Rich Text
    Editor is disabled.
 - (2010/05/24) Fixed bug#5383 - Fckeditor localization not working for some
    languages such as Brazilian Portuguese.
 - (2010/05/07) Fixed bug#5336 - Also set execute bit on scripts/tools.
 - (2010/04/21) Fixed bug#5266 - Ticket Zoom shows wrong html content if there
    is no text but two html attachments in there.
 - (2010/04/15) Fixed bug#5242 - Newlines are not displayed in html notification
    mails on Lotus Notes
 - (2010/04/14) Fixed bug#4999 - Cache for customer user is not refreshed when
    a preference is updated.
 - (2010/04/13) Fixed bug#5152 - responsible_user_id in ticket table is wrong in
    otrs-database.dia.
 - (2010/04/12) Fixed bug#5108 - The RSS date was not displayed correctly.
 - (2010/04/12) Fixed bug#5112 - Redirecting to a valid screen after unsubscribing
    from a ticket where the agent does not have permissions on the queue.
 - (2010/04/06) Fixed bug#4986 - There is no activate/deactivate check for
    Graphsize menu when the page loads in Stats Definition