@@ -2,7 +2,7 @@
 # Kernel/System/Ticket.pm - all ticket functions
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: Ticket.pm,v 1.416.2.10 2010-01-29 15:45:19 martin Exp $
+# $Id: Ticket.pm,v 1.416.2.11 2010-06-23 23:40:37 dz Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -36,7 +36,7 @@ use Kernel::System::Valid;
 use Kernel::System::HTMLUtils;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.416.2.10 $) [1];
+$VERSION = qw($Revision: 1.416.2.11 $) [1];
 
 =head1 NAME
 
@@ -1360,7 +1360,7 @@ sub TicketUnlockTimeoutUpdate {
         TicketID     => $Param{TicketID},
         CreateUserID => $Param{UserID},
         HistoryType  => 'Misc',
-        Name         => 'Reset of unlock time.',
+        Name         => '%%Reset of unlock time.',
     );
 
     # ticket event
@@ -7373,14 +7373,14 @@ sub DESTROY {
 
 =head1 TERMS AND CONDITIONS
 
-This software is part of the OTRS project (http://otrs.org/).
+This software is part of the OTRS project (L<http://otrs.org/>).
 
 This software comes with ABSOLUTELY NO WARRANTY. For details, see
 the enclosed file COPYING for license information (AGPL). If you
-did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
+did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.416.2.10 $ $Date: 2010-01-29 15:45:19 $
+$Revision: 1.416.2.11 $ $Date: 2010-06-23 23:40:37 $
 
 =cut
