@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.141 2010-06-22 13:02:12 mh Exp $
+# $Id: CHANGES,v 1.993.2.142 2010-06-23 23:40:37 dz Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.8 (2010/??/??)
+ - (2010/06/23) Fixed bug#5376 - String "Reset of unlock time" not translated.
  - (2010/06/16) Fixed bug#5488 - AutoPriorityIncrease runs into failures.
  - (2010/06/16) Fixed bug#5478 - Web Installer has 'editable' license text.
  - (2010/05/31) Fixed bug#5385 - Queue name is not used in signature on ticket
